--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PDFViwer</title>
-    <script type="module" crossorigin src="/assets/main-DWtYQ8Ok.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-B8cFPoMB.css">
+    <script type="module" crossorigin src="/pdf-viewer/assets/main-CDEGtk7D.js"></script>
+    <link rel="stylesheet" crossorigin href="/pdf-viewer/assets/main-B8cFPoMB.css">
   </head>
   <body>
     <div id="app"></div>
